# Kokkos

./: .gitignore  .gitlab-ci.yml  404.html  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml  static.yml
Exercises/: environment.sh
Exercises/Daxpy/: daxpy.cpp  daxpy_views.cpp
Exercises/InnerProduct/: CMakeCache.txt  Makefile  cmake_install.cmake  inner_product_cpu.cpp
Exercises/MDRangeMoreViews/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  nested_loops.cpp  out.nsys-rep  out.sqlite
Exercises/MDRangeMoreViews/compile_tests/: compiles_cuda.cu
Exercises/MDRangeMoreViews/test/: test  test.cu
Exercises/MemAccessPatterns/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  layout.cpp
Exercises/RiemannSum/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  out.nsys-rep  out.sqlite  riemann_sum_lambda.cpp
Exercises/ViewsAndSpaces/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  views.cpp
Exercises2/: Makefile.inc
Exercises2/MatMul/: Makefile  MatMul.cpp  MatMul.hpp  README.md  main.cpp  main.x
Exercises2/configuration/: Makefile  configuration.cpp  configuration.x
Exercises2/queryDevice/: Makefile  README.md  query_device.cpp  query_device.cu  query_device.cux  query_device.x
Exercises2/vectorAdd/: Makefile  README.md  vector_add.cpp  vector_add.x
docs/: index.md
docs/tutorials/: MatMul  vectorAdd
environments/: galileo100.sh
hello/: index.html
search/: search_index.json
tutorials/heatMiniAPP/: index.html
tutorials/installation/: index.html
(+19 files in other folders)
